/*
 * $Id: ChangeLog,v 1.4349 2005/09/23 13:31:35 gdrouillard Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-09-23 11:05 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/tip/httpcln.prg
    ! Fixed undeclared variables

2005-09-23 09:00 UTC-0500 Gerald Drouillard <gerald@drouillard.ca>
  * source/tip/url.prg
    + added method AddGetForm which is similar to httpcln.prg post put using the "GET" protocol.
  * source/tip/HTTPCLN.prg
    + added support for METHOD Post( cPostData) to accept cPostData as a 2d array.
    ! fixed handling of cookies to conform more to the specs, especially when the object is used to connect to multiple servers.
    + added methods setcookies and getcookies.
    + added method readall() - useful if the encoding is chunked that returns IMO what read should, but I didn't want to break anyones code.
    ! clear :hHeadears in :ReadHeaders as to not to keep adding to them.
    ! removed the ":" in :ReadHeaders cases statement.
  * source/tip/client.prg
    + in :close() set the :socketcon to nil.  This is a quick way to see if you may still have a connection.

2005-09-22 16:01 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/classes.c
  * source/vm/codebloc.c
  * source/vm/hvm.c
    - Removed array management from handling of asBlock.value->pSelfBase

   /*
      Unless I miss something this should never needed, and resolves not
      released memory (unless GC is executed) when object has block data[a].
    */


2005-09-22 12:48 UTC+0100 Giancarlo Niccolai (gc/at/niccolai.ws)
  * include/hbxml.ch
  * include/hbxml.h
  * source/rtl/hbxml.c
    + addedd support for CDATA nodes. A new type of node (CDATA) is
      created, and the content of the node is not parsed.
      CDATA blocks inside attribute values are not supported.

  * tests/xmltest.prg
  * tests/xmltest.xml